--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600;700&family=Spectral:wght@300;400;600;700&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  color: #333;
+  /* --main-font-1: Helvetica Arial, sans-serif; */
+  padding-top: 4rem;
+  font-family: var(--main-font-1);
+
+  /* VARIAVEIS */
+  --main-font-1: 'Kanit', sans-serif;
+  --main-font-2: 'Spectral', georgia;
+  --color-1: #fb1;
+  --color-2: #fea;
+  --color-3: #eee;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  text-decoration: none;
+  color: #333;
 }
 
-.App-link {
-  color: #61dafb;
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+img {
+  display: block;
+  max-width: 100%;
+}
+
+button,
+input {
+  display: block;
+  font-size: 1rem;
+  font-family: var(--main-font-1);
+}
+
+.container {
+  max-width: 50rem;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+
+.title {
+  font-family: var(--main-font-2);
+  line-height: 1;
+  font-size: 3rem;
+  margin: 1rem 0;
+  position: relative;
+}
+
+.title::after {
+  content: '';
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: var(--color-1);
+
+  position: absolute;
+  bottom: 5px;
+  left: -5px;
+  border-radius: 0.2rem;
+  z-index: -1;
+}
+
+.animeDown {
+  opacity: 0;
+  transform: translateY(-50px);
+  animation: animeDown 0.3s forwards;
+}
+
+@keyframes animeDown {
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    transform: initial;
   }
 }
